opam-version: "2.0"
version:"0.0.2"
maintainer: "opam-devel@lists.ocaml.org"
authors: [
  "Raja Boujbel <raja.boujbel@ocamlpro.com>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
]
homepage: "https://opam.ocaml.org/"
bug-reports: "https://github.com/ocaml/opam-rt/issues"
dev-repo: "git+https://github.com/ocaml/opam-rt.git"
build: [ make ]
depends: [
  "dune" {build}
  "opam-client"
  "cohttp-lwt-unix" { < "2.0.0" }
]
synopsis: "Test suite for opam"
pin-depends:
[
  [ "opam-client.2.0.5"     "git+https://github.com/ocaml/opam#2.0"]
  [ "opam-core.2.0.5"       "git+https://github.com/ocaml/opam#2.0"]
  [ "opam-format.2.0.5"     "git+https://github.com/ocaml/opam#2.0"]
  [ "opam-repository.2.0.5" "git+https://github.com/ocaml/opam#2.0"]
  [ "opam-solver.2.0.5"     "git+https://github.com/ocaml/opam#2.0"]
  [ "opam-state.2.0.5"      "git+https://github.com/ocaml/opam#2.0"]
]
