opam-version: "2.0"
version:"0.0.2"
maintainer: "opam-devel@lists.ocaml.org"
authors: [
  "Raja Boujbel <raja.boujbel@ocamlpro.com>"
  "Thomas Gazagnaire <thomas@gazagnaire.org>"
  "Louis Gesbert <louis.gesbert@ocamlpro.com>"
]
homepage: "https://opam.ocaml.org/"
bug-reports: "https://github.com/ocaml/opam-rt/issues"
dev-repo: "git+https://github.com/ocaml/opam-rt.git"
build: [ make ]
depends: [
  "dune" {build}
  "opam-client"
  "cohttp-lwt-unix" { < "2.0.0" }
]
synopsis: "Test suite for opam"
# If pin depends contains something else than opam lib, opam ci need to be
# changed: it builds opam-rt with --ignore-depends as opam lib are already
# pinned locally
pin-depends:
[
  [ "opam-client.dev"     "git+https://github.com/ocaml/opam#master"]
  [ "opam-core.dev"       "git+https://github.com/ocaml/opam#master"]
  [ "opam-format.dev"     "git+https://github.com/ocaml/opam#master"]
  [ "opam-repository.dev" "git+https://github.com/ocaml/opam#master"]
  [ "opam-solver.dev"     "git+https://github.com/ocaml/opam#master"]
  [ "opam-state.dev"      "git+https://github.com/ocaml/opam#master"]
]
