(executable
  (name opamRTmain)
  (public_name opam-rt)
  (modules OpamRTmain
           OpamRT
           OpamRTcheck
           OpamRTgit
           OpamRTinit
           OpamRTopam
           OpamRTpackages
  )
  (libraries opam-client cohttp-lwt-unix re.str)
)

(executable
  (name opamRTserver)
  (public_name opam-rt-server)
  (modules OpamRTserver)
  (libraries opam-client cohttp-lwt-unix re.str)
)
